--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/normalize.css" />
-  <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 
