--- a/html/all-jobs.html
+++ b/html/all-jobs.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="" />
   <title>Accedo Project</title>
-  <link rel="shortcut icon" href="../images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css" />
+  <link rel="stylesheet" href="../css/main.css" />
 </head>
 
 <body id="body">
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4 pb-lg-5 mb-lg-5  mt-lg-0 row"
         style="background-color: transparent !important">
         <a class="navbar-brand" href="#">
-          <img src="../images/logo.jpg" alt="" />
+          <img src="../images/logo.png" alt="" />
         </a>
         <button class="navbar-toggler" style="
               color: white !important
@@ -273,7 +273,7 @@
   <footer id="footer" style="background-color: black;">
     <div class="container pt-5 pb-5">
       <div class="footer-firtsRow">
-        <img src="../images/logo.jpg" alt="">
+        <img src="../images/logo.png" alt="">
         <div>
           <ul class="text-uppercase mb-4">
             <li><a href="../index.html">Home</a></li>
