--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="" />
   <title>Accedo Project</title>
-  <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4 pb-lg-5 mb-lg-5  mt-lg-0 row"
         style="background-color: transparent !important">
         <a class="navbar-brand" href="#">
-          <img src="./images/logo.jpg" alt="" />
+          <img src="./images/logo.png" alt="" />
         </a>
         <button class="navbar-toggler" style="
               color: white !important
@@ -60,7 +60,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link pr-0" href="./pages/all-jobs.html">All jobs</a>
+              <a class="nav-link pr-0" href="./html/all-jobs.html">All jobs</a>
             </li>
           </ul>
         </div>
@@ -90,7 +90,7 @@
       </div>
     </main>
 
-    <section id="search-section" class="container pt-4 pb-5">
+    <section id="search-section" class="container pt-4 pb-4">
       <div class="row">
         <div class="col-10 offset-1">
           <div class="row">
@@ -98,17 +98,17 @@
             <label for="input-location" class="col-4 pl-0">LOCATION:</label>
           </div>
           <div class="row">
-            <input type="text" name="" id="input-keyword" class="col-4" />
-            <input type="text" name="" id="input-location" class="col-4" />
-            <div class="col-4 text-center cursor-pointer" style="border: 1px solid white">
+            <input type="text" name="" id="input-keyword" class="col-12 col-md-4" />
+            <input type="text" name="" id="input-location" class="col-12 col-md-4" />
+            <div class="col-12 col-md-4 text-center cursor-pointer" style="border: 1px solid white">
               <i class="fa fa-search" aria-hidden="true"></i>
             </div>
           </div>
         </div>
       </div>
       <div class="row mb-4 pl-5 pr-5"></div>
-      <div class="row text-capitalize">
-        <a href="" class="col search-sectionLink text-center">View all jobs at harris product group</a>
+      <div class="row text-capitalize justify-content-center">
+        <a href="" class="search-sectionLink text-center">View all jobs at harris product group</a>
       </div>
     </section>
   </div>
@@ -214,7 +214,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-5 p-0">
-        <img src="./images/photo-3.jpeg" alt="" />
+        <img src="./images/side-image.png" alt="" />
       </div>
     </div>
   </section>
@@ -222,13 +222,13 @@
   <footer id="footer" style="background-color: black">
     <div class="container pt-5 pb-5">
       <div class="footer-firtsRow">
-        <img src="./images/logo.jpg" alt="" />
+        <img src="./images/logo.png" alt="" />
         <div>
           <ul class="text-uppercase mb-4">
             <li><a href="./index.html">Home</a></li>
             <li>About us</li>
             <li>Why harris</li>
-            <li><a href="./pages/all-jobs.html">All jobs</a></li>
+            <li><a href="./html/all-jobs.html">All jobs</a></li>
           </ul>
           <ul class="ml-auto">
             <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
