--- a/html/jdp.html
+++ b/html/jdp.html
@@ -67,7 +67,7 @@
       </nav>
     </header>
 
-    <section id="search-section" class="container pt-4 pb-5">
+    <section id="search-section" class="container pt-4 pb-4">
       <div class="row">
         <div class="col-10 offset-1">
           <div class="row">
@@ -75,17 +75,17 @@
             <label for="input-location" class="col-4 pl-0">LOCATION:</label>
           </div>
           <div class="row">
-            <input type="text" name="" id="input-keyword" class="col-4" />
-            <input type="text" name="" id="input-location" class="col-4" />
-            <div class="col-4 text-center cursor-pointer" style="border: 1px solid white">
+            <input type="text" name="" id="input-keyword" class="col-12 col-md-4" />
+            <input type="text" name="" id="input-location" class="col-12 col-md-4" />
+            <div class="col-12 col-md-4 text-center cursor-pointer" style="border: 1px solid white">
               <i class="fa fa-search" aria-hidden="true"></i>
             </div>
           </div>
         </div>
       </div>
       <div class="row mb-4 pl-5 pr-5"></div>
-      <div class="row text-capitalize">
-        <a href="" class="col search-sectionLink text-center">View all jobs at harris product group</a>
+      <div class="row text-capitalize justify-content-center">
+        <a href="" class="search-sectionLink text-center">View all jobs at harris product group</a>
       </div>
     </section>
   </div>
