design improvements have been added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4 pb-lg-5 mb-lg-5  mt-lg-0 row"
         style="background-color: transparent !important">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
           <img src="./images/logo.png" alt="" />
         </a>
         <button class="navbar-toggler" style="
@@ -100,7 +100,7 @@
           <div class="row">
             <input type="text" name="" id="input-keyword" class="col-12 col-md-4" />
             <input type="text" name="" id="input-location" class="col-12 col-md-4" />
-            <div class="col-12 col-md-4 text-center cursor-pointer" style="border: 1px solid white">
+            <div class="col-12 col-md-4 text-center" style="border: 1px solid white; cursor: pointer;">
               <i class="fa fa-search" aria-hidden="true"></i>
             </div>
           </div>
